--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ deploy:
   provider: releases
   api_key: $RELEASE_TOKEN
   file: "dist/*.exe"
-  skip_cleanup: true
+  cleanup: false
   draft: true
