--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-os: linux
-language: python
-python:
-  - 3.9
+os: windows
+language: shell
+before_install:
+  - choco install python --version=3.9
+  - python -m pip install --upgrade pip
+env: PATH=/c/Python39:/c/Python39/Scripts:$PATH
 install:
   - pip install -r requirements.txt
   - pip install pyinstaller
