--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_deploy:
 deploy:
   provider: releases
   api_key: $RELEASE_TOKEN
-  file: dist/*.exe
+  file: ./dist/Anatool.exe
   skip_cleanup: true
   draft: true
